--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,29 +2,30 @@
 <html>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <body>
-
 	<div ng-app="myApp" ng-controller="myCtrl">
 		{{ fName + " " + lName }}
-
-
-		<p>Input something in the input box:</p>
-		<p>
-			Name: <input type="text" ng-model="firstName">
-		</p>
-		<p>You wrote: {{ firstName }}</p>
-
+		<br>
+		<form ng-app="" name="myForm">
+    			Email: <input type="email" name="myAddress" ng-model="text" placeholder="Enter Email">
+    		    <span ng-show="myForm.myAddress.$error.email">Invalid Email!</span>
+		</form>
+		<p> 
+		Name: <input type="text" ng-model="firstName" placeholder="Enter Name">
+		<br>
+		Hi {{ firstName }}!
+		</p> 
 		Quantity: <input type="number" ng-model="quantity"> Price: <input type="number" ng-model="price"> 
 		<br> 
 		Total in dollars: {{ quantity * price }} 
-		<br> 
 		<ul>
-			<li ng-repeat="x in names">{{ x }}</li>
+			<li ng-repeat="x in sports">{{ x }}</li>
 		</ul>
+		<custom-directive></custom-directive>
+		<br>
 	</div>
 
 	<script src="js/modules/myApp.js"></script>
 	<script src="js/controllers/myCtrlrs.js"></script>
-	<script src="js/controllers/myDirectives.js"></script>
-
+	<script src="js/directives/myDirectives.js"></script>
 </body>
 </html>
